--- a/mixboard/mixboard.csproj
+++ b/mixboard/mixboard.csproj
@@ -207,6 +207,8 @@
     <None Include="Resources\btnrestablecer.png" />
     <None Include="Resources\btnrestableceramarillo.png" />
     <None Include="Resources\btnrestablecerOK.png" />
+    <None Include="Resources\ayuda.png" />
+    <None Include="Resources\ayuda2.png" />
     <Content Include="Resources\btnsinsonido.png" />
     <None Include="Resources\btnsinsonido1.png" />
   </ItemGroup>
